Attempt to fix the message div floating down. Other fixes:     * Strip timezone info from timestamps.     * Multiline messages won't break the separator line.
svn path=/branches/qtcpp/site/; revision=565

--- a/css/weblobby.css
+++ b/css/weblobby.css
@@ -29,6 +29,5 @@
 	padding-left: 3px;
 	padding-top: 3px;
 	vertical-align: top;
-	max-width: 80%; /* reset by js */
 	float: left;
 }
